--- a/Enterprise.Web/Enterprise.Web.csproj
+++ b/Enterprise.Web/Enterprise.Web.csproj
@@ -265,9 +265,9 @@
 
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNet.WebPages" Version="3.2.7" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.0" />
-    <PackageReference Include="NPOI" Version="2.4.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.5" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.5" />
+    <PackageReference Include="NPOI" Version="2.5.1" />
   </ItemGroup>
 
 
