--- a/Linkup.Common/Linkup.Common.csproj
+++ b/Linkup.Common/Linkup.Common.csproj
@@ -3,12 +3,12 @@
     <TargetFrameworks>netstandard2.1;netstandard2.0</TargetFrameworks>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="EnterpriseLibrary.Common.NetCore" Version="6.1.15-rc" />
-    <PackageReference Include="EnterpriseLibrary.Data.NetCore" Version="6.1.10-rc" />
-    <PackageReference Include="EnterpriseLibrary.ExceptionHandling.Logging.NetCore" Version="6.1.8-rc" />
-    <PackageReference Include="EnterpriseLibrary.ExceptionHandling.NetCore" Version="6.1.8-rc" />
-    <PackageReference Include="EnterpriseLibrary.Logging.Database.NetCore" Version="6.1.7-rc" />
-    <PackageReference Include="EnterpriseLibrary.Logging.NetCore" Version="6.1.7-rc" />
+    <PackageReference Include="EnterpriseLibrary.Common.NetCore" Version="6.3.0" />
+    <PackageReference Include="EnterpriseLibrary.Data.NetCore" Version="6.3.2" />
+    <PackageReference Include="EnterpriseLibrary.ExceptionHandling.Logging.NetCore" Version="6.3.0" />
+    <PackageReference Include="EnterpriseLibrary.ExceptionHandling.NetCore" Version="6.3.0" />
+    <PackageReference Include="EnterpriseLibrary.Logging.Database.NetCore" Version="6.3.2" />
+    <PackageReference Include="EnterpriseLibrary.Logging.NetCore" Version="6.3.2" />
     <PackageReference Include="Gma.QrCodeNet.Encoding" Version="2.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
