--- a/Sheng.Enterprise.Web/packages.config
+++ b/Sheng.Enterprise.Web/packages.config
@@ -4,13 +4,14 @@
   <package id="bootstrap" version="4.4.1" targetFramework="net472" />
   <package id="CommonServiceLocator.NetCore" version="1.3.1" targetFramework="net472" />
   <package id="CoreCompat.System.Drawing.v2" version="5.2.0-preview1-r131" targetFramework="net472" />
-  <package id="EnterpriseLibrary.Common.NetCore" version="6.1.15-rc" targetFramework="net472" />
-  <package id="EnterpriseLibrary.Data.NetCore" version="6.1.10-rc" targetFramework="net472" />
-  <package id="EnterpriseLibrary.ExceptionHandling.Logging.NetCore" version="6.1.8-rc" targetFramework="net472" />
-  <package id="EnterpriseLibrary.ExceptionHandling.NetCore" version="6.1.8-rc" targetFramework="net472" />
-  <package id="EnterpriseLibrary.Logging.NetCore" version="6.1.7-rc" targetFramework="net472" />
+  <package id="EnterpriseLibrary.Common.NetCore" version="6.3.0" targetFramework="net48" />
+  <package id="EnterpriseLibrary.Data.NetCore" version="6.3.2" targetFramework="net48" />
+  <package id="EnterpriseLibrary.ExceptionHandling.Logging.NetCore" version="6.3.0" targetFramework="net48" />
+  <package id="EnterpriseLibrary.ExceptionHandling.NetCore" version="6.3.0" targetFramework="net48" />
+  <package id="EnterpriseLibrary.Logging.NetCore" version="6.3.2" targetFramework="net48" />
   <package id="jQuery" version="3.4.1" targetFramework="net472" />
   <package id="jQuery.Validation" version="1.19.1" targetFramework="net472" />
+  <package id="Microsoft.ApplicationInsights" version="2.10.0" targetFramework="net48" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.Mvc.zh-Hans" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net472" />
@@ -28,16 +29,19 @@
   <package id="Microsoft.Win32.Registry" version="4.7.0" targetFramework="net472" />
   <package id="NETStandard.Library" version="2.0.3" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
-  <package id="NPOI" version="2.4.1" targetFramework="net472" />
+  <package id="NPOI" version="2.5.1" targetFramework="net48" />
   <package id="Oracle.ManagedDataAccess" version="19.6.0" targetFramework="net472" />
   <package id="Oracle.ManagedDataAccess.Core" version="2.19.60" targetFramework="net472" />
   <package id="popper.js" version="1.16.0" targetFramework="net472" />
+  <package id="Portable.BouncyCastle" version="1.8.6" targetFramework="net48" />
   <package id="SharpZipLib" version="1.2.0" targetFramework="net472" />
   <package id="System.Configuration.ConfigurationManager" version="4.7.0" targetFramework="net48" />
   <package id="System.Data.Odbc" version="4.7.0" targetFramework="net472" />
   <package id="System.Data.SqlClient" version="4.8.0" targetFramework="net472" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.5.0" targetFramework="net48" />
   <package id="System.Reflection.Emit" version="4.7.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.0" targetFramework="net472" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net48" />
   <package id="System.Security.AccessControl" version="4.7.0" targetFramework="net472" />
   <package id="System.Security.Permissions" version="4.7.0" targetFramework="net48" />
   <package id="System.Security.Principal.Windows" version="4.7.0" targetFramework="net472" />
