--- a/Sheng.Enterprise.Web/packages.config
+++ b/Sheng.Enterprise.Web/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net472" />
-  <package id="bootstrap" version="4.4.1" targetFramework="net472" />
+  <package id="bootstrap" version="4.5.0" targetFramework="net48" />
   <package id="CommonServiceLocator.NetCore" version="1.3.1" targetFramework="net472" />
   <package id="CoreCompat.System.Drawing.v2" version="5.2.0-preview1-r131" targetFramework="net472" />
   <package id="EnterpriseLibrary.Common.NetCore" version="6.3.0" targetFramework="net48" />
@@ -9,9 +9,9 @@
   <package id="EnterpriseLibrary.ExceptionHandling.Logging.NetCore" version="6.3.0" targetFramework="net48" />
   <package id="EnterpriseLibrary.ExceptionHandling.NetCore" version="6.3.0" targetFramework="net48" />
   <package id="EnterpriseLibrary.Logging.NetCore" version="6.3.2" targetFramework="net48" />
-  <package id="jQuery" version="3.4.1" targetFramework="net472" />
+  <package id="jQuery" version="3.5.1" targetFramework="net48" />
   <package id="jQuery.Validation" version="1.19.1" targetFramework="net472" />
-  <package id="Microsoft.ApplicationInsights" version="2.10.0" targetFramework="net48" />
+  <package id="Microsoft.ApplicationInsights" version="2.14.0" targetFramework="net48" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.Mvc.zh-Hans" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net472" />
@@ -23,31 +23,34 @@
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net472" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net472" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net472" />
-  <package id="Microsoft.Net.Compilers" version="3.4.0" targetFramework="net472" developmentDependency="true" />
-  <package id="Microsoft.NETCore.Platforms" version="3.1.0" targetFramework="net472" />
+  <package id="Microsoft.Net.Compilers" version="3.6.0" targetFramework="net48" developmentDependency="true" />
+  <package id="Microsoft.NETCore.Platforms" version="3.1.1" targetFramework="net48" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="Microsoft.Win32.Registry" version="4.7.0" targetFramework="net472" />
   <package id="NETStandard.Library" version="2.0.3" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
   <package id="NPOI" version="2.5.1" targetFramework="net48" />
-  <package id="Oracle.ManagedDataAccess" version="19.6.0" targetFramework="net472" />
-  <package id="Oracle.ManagedDataAccess.Core" version="2.19.60" targetFramework="net472" />
-  <package id="popper.js" version="1.16.0" targetFramework="net472" />
-  <package id="Portable.BouncyCastle" version="1.8.6" targetFramework="net48" />
+  <package id="Oracle.ManagedDataAccess" version="19.7.0" targetFramework="net48" />
+  <package id="Oracle.ManagedDataAccess.Core" version="2.19.70" targetFramework="net48" />
+  <package id="popper.js" version="1.16.1" targetFramework="net48" />
+  <package id="Portable.BouncyCastle" version="1.8.6.7" targetFramework="net48" />
   <package id="SharpZipLib" version="1.2.0" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.Configuration.ConfigurationManager" version="4.7.0" targetFramework="net48" />
   <package id="System.Data.Odbc" version="4.7.0" targetFramework="net472" />
-  <package id="System.Data.SqlClient" version="4.8.0" targetFramework="net472" />
-  <package id="System.Diagnostics.DiagnosticSource" version="4.5.0" targetFramework="net48" />
+  <package id="System.Data.SqlClient" version="4.8.1" targetFramework="net48" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.7.1" targetFramework="net48" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net48" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
   <package id="System.Reflection.Emit" version="4.7.0" targetFramework="net472" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net48" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net48" />
   <package id="System.Security.AccessControl" version="4.7.0" targetFramework="net472" />
   <package id="System.Security.Permissions" version="4.7.0" targetFramework="net48" />
   <package id="System.Security.Principal.Windows" version="4.7.0" targetFramework="net472" />
-  <package id="System.Threading.Tasks.Extensions" version="4.5.3" targetFramework="net472" />
-  <package id="Unity.Abstractions" version="5.11.3" targetFramework="net472" />
-  <package id="Unity.Container" version="5.11.4" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
+  <package id="Unity.Abstractions" version="5.11.6" targetFramework="net48" />
+  <package id="Unity.Container" version="5.11.8" targetFramework="net48" />
   <package id="Unity.Interception" version="5.11.1" targetFramework="net472" />
   <package id="Unity.Interception.NetCore" version="4.0.4" targetFramework="net472" />
   <package id="Unity.NetCore" version="4.0.3" targetFramework="net472" />
