--- a/Enterprise.Web/Enterprise.Web.dll.config
+++ b/Enterprise.Web/Enterprise.Web.dll.config
@@ -18,6 +18,74 @@
     <section name="dataConfiguration" type="Microsoft.Practices.EnterpriseLibrary.Data.Configuration.DatabaseSettings, Microsoft.Practices.EnterpriseLibrary.Data" requirePermission="true" />
     <section name="oracle.manageddataaccess.client" type="OracleInternal.Common.ODPMSectionHandler, Oracle.ManagedDataAccess, Version=4.122.19.1, Culture=neutral, PublicKeyToken=89b483f429c47342" />
   </configSections>
+  <loggingConfiguration name="" tracingEnabled="true" defaultCategory="Management">
+    <listeners>
+      <add name="XML Trace Listener" type="Microsoft.Practices.EnterpriseLibrary.Logging.TraceListeners.XmlTraceListener, Microsoft.Practices.EnterpriseLibrary.Logging" listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.XmlTraceListenerData, Microsoft.Practices.EnterpriseLibrary.Logging" fileName="TraceLog\trace-xml.log" traceOutputOptions="None" />
+      <add name="ExceptionHandling Flat File Trace Listener" type="Microsoft.Practices.EnterpriseLibrary.Logging.TraceListeners.FlatFileTraceListener, Microsoft.Practices.EnterpriseLibrary.Logging" listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.FlatFileTraceListenerData, Microsoft.Practices.EnterpriseLibrary.Logging" fileName="TraceLog\ExceptionHandling.log" formatter="ExceptionHandling Text Formatter" traceOutputOptions="Callstack" />
+      <add name="Verbose Rolling Flat File Trace Listener" type="Microsoft.Practices.EnterpriseLibrary.Logging.TraceListeners.RollingFlatFileTraceListener, Microsoft.Practices.EnterpriseLibrary.Logging" listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.RollingFlatFileTraceListenerData, Microsoft.Practices.EnterpriseLibrary.Logging" fileName="TraceLog\rolling_Verbose.log" formatter="Simple Text Formatter" rollFileExistsBehavior="Increment" rollInterval="Week" traceOutputOptions="None" filter="Verbose" asynchronous="false" />
+      <add name="Information Rolling Flat File Trace Listener" type="Microsoft.Practices.EnterpriseLibrary.Logging.TraceListeners.RollingFlatFileTraceListener, Microsoft.Practices.EnterpriseLibrary.Logging" listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.RollingFlatFileTraceListenerData, Microsoft.Practices.EnterpriseLibrary.Logging" fileName="TraceLog\rolling_Information.log" formatter="Simple Text Formatter" rollFileExistsBehavior="Increment" rollInterval="Week" filter="Information" asynchronous="false" />
+      <add name="Warning Rolling Flat File Trace Listener" type="Microsoft.Practices.EnterpriseLibrary.Logging.TraceListeners.RollingFlatFileTraceListener, Microsoft.Practices.EnterpriseLibrary.Logging" listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.RollingFlatFileTraceListenerData, Microsoft.Practices.EnterpriseLibrary.Logging" fileName="TraceLog\rolling_Warning.log" formatter="Simple Text Formatter" rollFileExistsBehavior="Increment" filter="Warning" asynchronous="false" />
+      <add name="Error Rolling Flat File Trace Listener" type="Microsoft.Practices.EnterpriseLibrary.Logging.TraceListeners.RollingFlatFileTraceListener, Microsoft.Practices.EnterpriseLibrary.Logging" listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.RollingFlatFileTraceListenerData, Microsoft.Practices.EnterpriseLibrary.Logging" fileName="TraceLog\rolling_Error.log" formatter="Simple Text Formatter" rollFileExistsBehavior="Increment" filter="Error" />
+      <!--<add name="Database Trace Listener" type="Microsoft.Practices.EnterpriseLibrary.Logging.Database.FormattedDatabaseTraceListener, Microsoft.Practices.EnterpriseLibrary.Logging.Database"
+        listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Database.Configuration.FormattedDatabaseTraceListenerData, Microsoft.Practices.EnterpriseLibrary.Logging.Database"
+        databaseInstanceName="LoggingConnection" writeLogStoredProcName="WriteLog"
+        addCategoryStoredProcName="AddCategory" formatter="Simple Text Formatter" />-->
+    </listeners>
+    <formatters>
+      <add type="Microsoft.Practices.EnterpriseLibrary.Logging.Formatters.TextFormatter, Microsoft.Practices.EnterpriseLibrary.Logging" template="Timestamp: {timestamp(local)}{newline}&#xA;Title:{title}{newline}&#xA;Message: {message}{newline}&#xA;Severity: {severity}{newline}" name="Simple Text Formatter" />
+      <add type="Microsoft.Practices.EnterpriseLibrary.Logging.Formatters.TextFormatter, Microsoft.Practices.EnterpriseLibrary.Logging" template="Timestamp: {timestamp(local)}{newline}&#xA;Title:{title}{newline}&#xA;Message: {message}{newline}&#xA;Severity: {severity}{newline}" name="ExceptionHandling Text Formatter" />
+    </formatters>
+    <categorySources>
+      <add switchValue="All" name="Management">
+        <listeners>
+          <add name="Verbose Rolling Flat File Trace Listener" />
+          <add name="Information Rolling Flat File Trace Listener" />
+          <add name="Warning Rolling Flat File Trace Listener" />
+          <add name="Error Rolling Flat File Trace Listener" />
+          <!--<add name="Database Trace Listener" />-->
+        </listeners>
+      </add>
+      <add switchValue="All" name="ExceptionHandlingLogCategory">
+        <listeners>
+          <add name="ExceptionHandling Flat File Trace Listener" />
+          <!--<add name="Database Trace Listener" />-->
+        </listeners>
+      </add>
+    </categorySources>
+    <specialSources>
+      <allEvents switchValue="All" name="All Events" />
+      <notProcessed switchValue="All" name="Unprocessed Category" />
+      <errors switchValue="All" name="Logging Errors &amp; Warnings">
+        <listeners>
+          <add name="XML Trace Listener" />
+        </listeners>
+      </errors>
+    </specialSources>
+  </loggingConfiguration>
+  <exceptionHandling>
+    <exceptionPolicies>
+      <add name="LogAndWrap">
+        <exceptionTypes>
+          <add name="All Exceptions" type="System.Exception, mscorlib" postHandlingAction="ThrowNewException">
+            <exceptionHandlers>
+              <add name="Logging Exception Handler" type="Microsoft.Practices.EnterpriseLibrary.ExceptionHandling.Logging.LoggingExceptionHandler, Microsoft.Practices.EnterpriseLibrary.ExceptionHandling.Logging" logCategory="ExceptionHandlingLogCategory" eventId="100" severity="Error" title="Enterprise Library Exception Handling" formatterType="Microsoft.Practices.EnterpriseLibrary.ExceptionHandling.TextExceptionFormatter, Microsoft.Practices.EnterpriseLibrary.ExceptionHandling" priority="0" />
+              <add name="Wrap Handler" type="Microsoft.Practices.EnterpriseLibrary.ExceptionHandling.WrapHandler, Microsoft.Practices.EnterpriseLibrary.ExceptionHandling" wrapExceptionType="Linkup.Common.WrappedException, Linkup.Common, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" />
+            </exceptionHandlers>
+          </add>
+        </exceptionTypes>
+      </add>
+      <add name="JustLog">
+        <exceptionTypes>
+          <add name="All Exceptions" type="System.Exception, mscorlib" postHandlingAction="None">
+            <exceptionHandlers>
+              <add name="Logging Exception Handler" type="Microsoft.Practices.EnterpriseLibrary.ExceptionHandling.Logging.LoggingExceptionHandler, Microsoft.Practices.EnterpriseLibrary.ExceptionHandling.Logging" logCategory="ExceptionHandlingLogCategory" eventId="100" severity="Error" title="Enterprise Library Exception Handling" formatterType="Microsoft.Practices.EnterpriseLibrary.ExceptionHandling.TextExceptionFormatter, Microsoft.Practices.EnterpriseLibrary.ExceptionHandling" priority="0" />
+            </exceptionHandlers>
+          </add>
+        </exceptionTypes>
+      </add>
+    </exceptionPolicies>
+  </exceptionHandling>
+  <dataConfiguration defaultDatabase="DefaultConnection" />
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=Enterprise;User Id =sa;Password=1;" providerName="System.Data.SqlClient" />
   </connectionStrings>
