--- a/Sheng.Enterprise.Web/packages.config
+++ b/Sheng.Enterprise.Web/packages.config
@@ -3,7 +3,6 @@
   <package id="Antlr" version="3.5.0.2" targetFramework="net472" />
   <package id="bootstrap" version="4.5.0" targetFramework="net48" />
   <package id="CommonServiceLocator.NetCore" version="1.3.1" targetFramework="net472" />
-  <package id="CoreCompat.System.Drawing.v2" version="5.2.0-preview1-r131" targetFramework="net472" />
   <package id="EnterpriseLibrary.Common.NetCore" version="6.3.0" targetFramework="net48" />
   <package id="EnterpriseLibrary.Data.NetCore" version="6.3.2" targetFramework="net48" />
   <package id="EnterpriseLibrary.ExceptionHandling.Logging.NetCore" version="6.3.0" targetFramework="net48" />
@@ -40,6 +39,7 @@
   <package id="System.Data.Odbc" version="4.7.0" targetFramework="net472" />
   <package id="System.Data.SqlClient" version="4.8.1" targetFramework="net48" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.7.1" targetFramework="net48" />
+  <package id="System.Drawing.Common" version="4.7.0" targetFramework="net48" />
   <package id="System.Memory" version="4.5.4" targetFramework="net48" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
   <package id="System.Reflection.Emit" version="4.7.0" targetFramework="net472" />
