--- a/Linkup.Common/Linkup.Common.csproj
+++ b/Linkup.Common/Linkup.Common.csproj
@@ -11,8 +11,8 @@
     <PackageReference Include="EnterpriseLibrary.ExceptionHandling.NetCore" Version="6.3.0" />
     <PackageReference Include="EnterpriseLibrary.Logging.Database.NetCore" Version="6.3.2" />
     <PackageReference Include="EnterpriseLibrary.Logging.NetCore" Version="6.3.2" />
-    <PackageReference Include="Gma.QrCodeNet.Encoding" Version="2.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.1" />
+    <PackageReference Include="System.Drawing.Common" Version="4.7.0" />
   </ItemGroup>
 </Project>
